--- a/css/content.css
+++ b/css/content.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     font-family: Arial, serif, sans-serif, 'Helvetica', Montserrat;
@@ -17,17 +18,15 @@ html, body {
     padding-bottom: 80px;
 }
 
-@media only screen and (max-width: 798px) {
-    .content {
-    margin: 0;
-    padding: 0;
-    padding-bottom: 80px;
-}
-}
-
-
 .content .section {
     font-size: 36px;
+    margin: 0;
+    text-align: center;
+    padding: 30px 5% 10px 5%;
+}
+
+.content .section-title {
+    font-size: 26px;
     margin: 0;
     text-align: center;
     padding: 10px 5%;
@@ -50,7 +49,6 @@ html, body {
 .content a {
     color: black;
     text-decoration-line: none;
-    /*font-family: "Calibri Light", serif;*/
 }
 
 .content p a {
@@ -63,14 +61,6 @@ html, body {
 
 .content li a:hover span {
     color: #71ebff;
-}
-
-span {
-    color: #0077aa;
-}
-
-span:hover {
-    color: aqua;
 }
 
 .content img {
@@ -116,7 +106,7 @@ mark {
     color: white;
     text-align: center;
 
-    min-width:8%;
+    min-width: 8%;
     width: auto;
     margin: 10px 0 10px 41.5%;
 
@@ -141,7 +131,8 @@ table {
     border: 1px solid grey;
 }
 
-th, td {
+th,
+td {
     text-align: left;
     padding: 10px;
     border-collapse: collapse;
@@ -151,6 +142,138 @@ th, td {
 th {
     background: #ececec;
 }
+
 .th {
     width: 40%;
+}
+
+/*Стили списков лабараторных работ*/
+
+.lr-list {
+    counter-reset: li;
+    list-style: none;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
+}
+
+.lr-list a {
+    position: relative;
+    display: block;
+    padding: .4em .4em .4em .8em;
+    margin: .5em 0 .5em 2.5em;
+    background: #D3D4DA;
+    color: #444;
+    text-decoration: none;
+    transition: all .3s ease-out;
+}
+
+.lr-list a:hover {
+    background: #DCDDE1;
+}
+
+.lr-list a:before {
+    content: counter(li);
+    counter-increment: li;
+    position: absolute;
+    left: -2.5em;
+    top: 50%;
+    margin-top: -1em;
+    background: #9097A2;
+    height: 2em;
+    width: 2em;
+    line-height: 2em;
+    text-align: center;
+    font-weight: bold;
+}
+
+.lr-list a:after {
+    position: absolute;
+    content: "";
+    border: .5em solid transparent;
+    left: -1em;
+    top: 50%;
+    margin-top: -.5em;
+    transition: all .3s ease-out;
+}
+
+.lr-list a:hover:after {
+    left: -.5em;
+    border-left-color: #9097A2;
+}
+
+@media only screen and (max-width: 798px) {
+    .content {
+        margin: 0;
+        padding: 0;
+        padding-bottom: 80px;
+    }
+
+    .lr-list {
+        padding-right: 40px;
+    }
+
+    .brand {
+        font-size: 18px;
+    }
+}
+
+/*Стили кнопок для перехода между лабами*/
+
+.button{
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.atuin-btn {
+    display: inline-flex;
+    margin: 10px;
+    text-decoration: none;
+    position: relative;
+    font-size: 20px;
+    line-height: 20px;
+    padding: 12px 30px;
+    color: #FFF;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: #337AB7;
+    cursor: pointer;
+    border: 2px solid #BFE2FF;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.atuin-btn:hover,
+.atuin-btn:active,
+.atuin-btn:focus {
+    color: #FFF;
+}
+
+.atuin-btn:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: -50px;
+    bottom: 0;
+    left: 0;
+    border-right: 50px solid transparent;
+    border-top: 50px solid #2D6B9F;
+    transition: transform 0.5s;
+    transform: translateX(-100%);
+    z-index: -1;
+}
+
+.atuin-btn:hover:before,
+.atuin-btn:active:before,
+.atuin-btn:focus:before {
+    transform: translateX(0);
+}
+
+.atuin-btn span{
+    visibility: hidden;
+}
+
+.lr-btn{
+    margin-left: auto;
+    margin-right: auto;
+    display: table;
 }
