--- a/examples/advanced/fragments/index.html
+++ b/examples/advanced/fragments/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Фрагменты</title>
-
-    <link rel="stylesheet" href="../../../../web-page/css/header.css">
-    <link rel="stylesheet" href="../../../../web-page/css/content.css">
+    
+    <link rel="stylesheet" href="../../../css/header.css">
+    <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
