--- a/examples/libraries/prism.css
+++ b/examples/libraries/prism.css
@@ -1,7 +1,7 @@
 /* PrismJS 1.14.0
 http://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript */
 /**
- * prism.js default theme for JavaScript, CSS and HTML
+ * prism.js default theme for JavaScript, css and HTML
  * Based on dabblet (http://dabblet.com)
  * @author Lea Verou
  */
