--- a/libraries/prism.css
+++ b/libraries/prism.css
@@ -1,7 +1,7 @@
 /* PrismJS 1.23.0
 https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+jsx+tsx+typescript&plugins=line-numbers */
 /**
- * prism.js default theme for JavaScript, CSS and HTML
+ * prism.js default theme for JavaScript, css and HTML
  * Based on dabblet (http://dabblet.com)
  * @author Lea Verou
  */
