fix typo mistake

--- a/css/content.css
+++ b/css/content.css
@@ -146,7 +146,7 @@ th {
     width: 40%;
 }
 
-/*Стили списков лабараторных работ*/
+/*Стили списков лабораторных работ*/
 
 .lr-list {
     counter-reset: li;
