Добавление меню навигации + скрипт подсветки текущего пункта
Скрипт для подсветки текущего пункта (реализован в теории,  1 раздел "Установка React,js")

--- a/css/general.css
+++ b/css/general.css
@@ -8,6 +8,8 @@
 @import url("content.css");
 /*Стили для главного меню всех страниц*/
 @import url("header.css");
+@import url("navigator.css");
+
 
 
 /*-----ДОПОЛНИТЕЛЬНЫЕ СТИЛИ-----*/
