--- a/css/content.css
+++ b/css/content.css
@@ -15,7 +15,7 @@ body {
     max-width: 1920px;
     height: auto;
     font-size: 20px;
-    margin: 0 10%;
+    /*margin: 0 10%;*/
     padding: 0 50px;
     padding-bottom: 80px;
 }
