--- a/css/content.css
+++ b/css/content.css
@@ -46,10 +46,9 @@ body {
     padding: 10px 20px;
 }
 
-.content ul{
-    list-style-type: none;
-
-    padding: 10px 8%;
+.content ul {
+    padding: 10px 20px;
+    padding-left: 40px;
     margin: 0;
 }
 
