Адаптация скрипта содержания + правка стилей

--- a/css/content.css
+++ b/css/content.css
@@ -12,18 +12,19 @@ body {
 .content {
     background: white;
     min-height: calc(100% - 161px);
-    max-width: 1920px;
+    max-width: 80%;
     height: auto;
     font-size: 20px;
-    line-height: 1.5;
     padding: 0 50px;
     padding-bottom: 80px;
+    overflow-x: hidden;
 }
 
 .content .section {
-    padding: 30px 20px 10px 20px;
     font-size: 36px;
-    font-weight:700;
+    margin: 0;
+    text-align: center;
+    padding: 30px 5% 10px 5%;
 }
 
 .content .section-title {
@@ -41,14 +42,16 @@ body {
 }
 
 .content p {
-    text-align: left;
+    text-indent: 50px;
+    text-align: justify;
     margin: 0;
     padding: 10px 20px;
 }
 
-.content ul {
-    padding: 10px 20px;
-    padding-left: 40px;
+.content ul{
+    list-style-type: none;
+
+    padding: 10px 8%;
     margin: 0;
 }
 
@@ -82,18 +85,16 @@ body {
 }
 
 .warning {
-    background-color: #fffb8b;
-    padding: 25px;
-    border-radius: 5px;
+    background-color: #fffdcb;
+    padding: 0 30px;
+    margin: 10px;
+    border-left: 20px solid #505050;
 }
 
 mark {
     background: #e4e4e4;
     border-radius: 5px;
-    padding: 3px;
-    font-family: monospace;
-    line-height: 1.5;
-    font-size: 20px;
+    padding: 0 10px;
 }
 
 .markJSX {
@@ -216,14 +217,12 @@ th {
         margin: 0;
         padding: 0;
         padding-bottom: 80px;
+        max-width: 100%;
+        overflow-y: hidden;
     }
 
-    .warning {
-        border-radius: 0;
-    }
-
-    pre[class*="language-"] {
-        border-radius: 0 !important;
+    .content .section, .content .section-title {
+        text-indent: 0;
     }
 
     .lr-list {
@@ -234,6 +233,6 @@ th {
         font-size: 18px;
     }
     .content img{
-        max-width: 90% !important;
-    }
+    max-width: 90% !important;
+}
 }
