--- a/css/theme.css
+++ b/css/theme.css
@@ -239,3 +239,56 @@
     transform: translateX(-50%) translateY(-50%) scale(1);
 }    
 
+
+/*Стили списков лабораторных работ*/
+
+.lr-list {
+    counter-reset: li;
+    list-style: none;
+    /*text-shadow: 0 1px 0 rgba(255, 255, 255, .5);*/
+}
+
+.lr-list a {
+    position: relative;
+    display: block;
+    padding: .4em .4em .4em .8em;
+    margin: .5em 0 .5em 2.5em;
+    background: #D3D4DA;
+    color: #000;
+    text-decoration: none;
+    transition: all .3s ease-out;
+}
+
+.lr-list a:hover {
+    background: #DCDDE1;
+}
+
+.lr-list a:before {
+    content: counter(li);
+    counter-increment: li;
+    position: absolute;
+    left: -2.5em;
+    top: 50%;
+    margin-top: -1em;
+    background: #9097A2;
+    height: 2em;
+    width: 2em;
+    line-height: 2em;
+    text-align: center;
+    font-weight: bold;
+}
+
+.lr-list a:after {
+    position: absolute;
+    content: "";
+    border: .5em solid transparent;
+    left: -1em;
+    top: 50%;
+    margin-top: -.5em;
+    transition: all .3s ease-out;
+}
+
+.lr-list a:hover:after {
+    left: -.5em;
+    border-left-color: #9097A2;
+}
