--- a/css/navigator.css
+++ b/css/navigator.css
@@ -52,10 +52,11 @@
 .site-nav ul li:hover {
     background-color: rgb(224, 224, 224);
     border-left: 7px solid rgb(117, 117, 117);
-    padding-left: 20px;
+    padding-left: -7px;
 }
 
 .site-nav-list-active{
+    padding-left: -7px !important;
     border-left: 7px solid rgba(97, 219, 251, 1);
     background-color: rgb(97, 218, 251, 0.2);
 }
