Подключение всех шрифтов локально  (offline link)
Подключение шрифтов страниц через локальные файлы

--- a/css/general.css
+++ b/css/general.css
@@ -9,6 +9,7 @@
 /*Стили для главного меню всех страниц*/
 @import url("header.css");
 @import url("navigator.css");
+@import url("fonts.css");
 
 
 
