--- a/css/content.css
+++ b/css/content.css
@@ -45,7 +45,8 @@ body {
     font-size: 26px;
     margin: 0;
     text-align: left;
-    padding: 10px 5%;
+    padding: 10px 20px;
+    font-weight: 600;
 }
 
 .content p {
@@ -200,7 +201,7 @@ th {
     }
 
     .lr-list {
-        padding-right: 40px;
+        padding-right: 20px;
     }
 
     .brand {
@@ -209,8 +210,9 @@ th {
     .content img {
         max-width: 90% !important;
     }
-    .central-page{
-    max-width: 100%;
-    margin: 0 0;
-}
+    .central-page {
+        width: 100%;
+        margin: 0 0;
+        display: inline-block;
+    }
 }
