--- a/css/header.css
+++ b/css/header.css
@@ -99,7 +99,7 @@ nav ul li ul li a {
 
   nav{
     width: 100%;
-    padding: 50px 0 15px;
+    padding: 70px 0 0;
   }
   nav ul {
     display: none;
